--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </tbody>
     </table>
   </div>
-  <footer class="footer">Derecho reservados a Jesus Carrillo</footer>
+  <footer class="footer">Derechos reservados a Jesús Carrillo</footer>
 </body>
 
 </html>
