--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               class="icon-social" /></a>
           <a href="https://www.instagram.com/jesus.carbar/" target="_blank"><img src="assets/icons/instagram.svg" alt=""
               class="icon-social" /></a>
-          <a href="https://github.com/carrillojesus/carrillojesus" target="_blank"><img src="assets/icons/github.svg"
+          <a href="https://github.com/carrillojesus" target="_blank"><img src="assets/icons/github.svg"
               alt="" class="icon-social" /></a>
         </div>
       </div>
