--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <tr>
           <td>1</td>
           <td>Login con bootstrap</td>
-          <td><a href="https://carrillojesus.github.io/login" target="_blank"></a></td>
+          <td><a href="https://carrillojesus.github.io/login" target="_blank">Ver</a></td>
         </tr>
         <tr>
           <td></td>
